# c

./: 3_sum  3_sum.c  CMakeLists.txt  altnames  altnames.c  binary.c  boolean.c  choice.c  cypher1  cypher1.c.c  cypher2  cypher2.c  day_mon1.c  defines  defines.c  dema  dema.c  designate.c  echo  echo.c  echo_eof  echo_eof.c  factor  factor.c  file_eof  file_eof.c  floaterr  floaterr.c  guess  guess.c  hello  hello.c  hello.h  hello.i  hello.s  helo  hotel.c  hotel.h  input  input.c  (+58 more)
hello.dSYM/Contents/Resources/DWARF/: hello
luck_num.dSYM/Contents/: Info.plist
luck_num.dSYM/Contents/Resources/DWARF/: luck_num
rand.dSYM/Contents/: Info.plist
rand.dSYM/Contents/Resources/DWARF/: rand
scanf.dSYM/Contents/Resources/DWARF/: scanf
str.dSYM/Contents/Resources/DWARF/: str
